--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
+    padding: 25px 0;
 }
 
 .soon a {
@@ -61,6 +61,12 @@ nav {
 
 .nav-ul li a {
     color: white;
+}
+
+.nav-menuicon {
+    display: none;
+    position: relative;
+    z-index: 10;
 }
 
 /* Main */
@@ -92,4 +98,52 @@ main .container {
 
 .main-img img {
     width: 100%;
+}
+
+/* Responsiveness */
+@media (max-width: 960px) {
+    .nav-menuicon {
+        display: block;
+    }
+
+    .nav-ul {
+        position: fixed;
+        background: var(--blindfold);
+        top: 0;
+        width: 100%;
+        height: 100%;
+        left: 100%;
+        transition: 0.3s;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .nav-ul li {
+        font-size: 20px;
+        margin: 20px 0px;
+    }
+
+    .active {
+        left: 0%;
+    }
+
+    main .container {
+        flex-direction: column;
+    }
+
+    main .container .main-text,
+    main .container .main-img {
+        width: 100%;
+        text-align: center;
+        margin-top: 10px;
+        margin-bottom: 30px;
+    }
+
+    main .container .main-text h1 {
+        font-size: 4rem;
+    }
+
+    main .container .main-text div {
+        justify-content: center;
+    }
 }
