--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,6 +177,40 @@ main .container {
     font-weight: 600;
 }
 
+/* Section - Home */
+.home .container {
+    display: flex;
+    align-items: center;
+}
+
+.home .home-img {
+    width: 50%;
+}
+
+.home .home-img img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.home .home-text {
+    width: 50%;
+    padding-left: 90px;
+}
+
+.home .home-text h2 {
+    font-size: 2.5rem;
+}
+
+.home .home-text p {
+    margin: 20px 0;
+    color: var(--color-p);
+}
+
+.home .home-text p b {
+    color: black;
+    font-size: 20px;
+}
+
 /* Responsiveness */
 @media (max-width: 960px) {
     .nav-menuicon {
@@ -243,6 +277,34 @@ main .container {
 
     .differentials .card {
         width: 100%;
+    }
+
+    .home .container {
+        flex-direction: column-reverse;
+    }
+
+    .home .home-text {
+        width: 100%;
+        text-align: center;
+        padding-left: 0px;
+    }
+
+    .home .home-text h2 {
+        margin-top: -25px;
+    }
+
+    .home .home-text p {
+        margin-top: 40px;
+        margin-bottom: 10px;
+    }
+
+    .home .home-text img {
+        margin-top: 40px;
+    }
+
+    .home .home-img {
+        width: 100%;
+        margin-top: 40px;
     }
 }
 
