--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,6 +211,61 @@ main .container {
     font-size: 20px;
 }
 
+/* Section - Best Places */
+
+.best-places .blue {
+    font-size: 24px;
+    font-weight: 600;
+    color: #0060f0;
+}
+
+.best-places h2 {
+    margin-top: 10px;
+    font-size: 2.5rem;
+}
+
+.best-places .cards {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+
+.best-places .cards .card-item {
+    width: 30%;
+    text-align: center;
+    padding: 30px 0;
+    border-radius: 20px;
+    box-shadow: 0px 10px 67px 8px #9e9ead85;
+}
+
+.best-places .cards .card-item img {
+    width: 80px;
+}
+
+.best-places .cards .card-item .place-home {
+    margin: 5px 0;
+    color: var(--color-p);
+}
+
+.best-places .cards .card-item .name-home {
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.best-places .cards .card-item .contact-home {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: var(--color-p2);
+}
+
+.best-places .cards .card-item button {
+    padding: 10px 20px;
+    color: white;
+    background-color: var(--orange);
+    border: none;
+    font-weight: bold;
+}
+
 /* Responsiveness */
 @media (max-width: 960px) {
     .nav-menuicon {
@@ -305,6 +360,15 @@ main .container {
     .home .home-img {
         width: 100%;
         margin-top: 40px;
+    }
+
+    .best-places .cards {
+        flex-direction: column;
+    }
+
+    .best-places .cards .card-item {
+        width: 100%;
+        margin-top: 50px;
     }
 }
 
