CHORE: Implementando FOOTER

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,6 +228,7 @@ main .container {
     display: flex;
     justify-content: space-between;
     margin-top: 50px;
+    margin-bottom: 15px;
 }
 
 .best-places .cards .card-item {
@@ -264,6 +265,53 @@ main .container {
     background-color: var(--orange);
     border: none;
     font-weight: bold;
+}
+
+/* Footer */
+footer {
+    background-color: var(--blindfold);
+}
+
+footer .container {
+    display: flex;
+    color: white;
+}
+
+footer .container ul {
+    width: 33%;
+}
+
+footer .container h3 {
+    margin-bottom: 16px;
+    font-weight: 600;
+}
+
+footer .container .social-networks img {
+    margin-top: 20px;
+    margin-right: 10px;
+}
+
+footer .container ul > p {
+    margin-bottom: 40px;
+    margin-right: 20px;
+}
+
+footer .container li {
+    margin: 10px 0;
+}
+
+footer .container a {
+    color: white;
+}
+
+footer .footer-developers  {
+    margin-top: 50px;
+    margin-bottom: -10px;
+    text-align: center;
+}
+
+footer .footer-developers a {
+    color: white;
 }
 
 /* Responsiveness */
@@ -369,6 +417,15 @@ main .container {
     .best-places .cards .card-item {
         width: 100%;
         margin-top: 50px;
+    }
+
+    footer .container {
+        flex-direction: column;
+    }
+
+    footer .container ul {
+        width: 100%;
+        margin-bottom: 30px;
     }
 }
 
